test/objects/Site__c/fields/Environnement__c.field-meta.xml
<CustomField>
    <fullName>Environnement__c</fullName>
    <label>Environnement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Environnement 1</fullName>
            </value>
            <value>
                <fullName>Environnement 2</fullName>
            </value>
            <value>
                <fullName>Environnement 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>