test/objects/Site__c/fields/Exigences__c.field-meta.xml
<CustomField>
    <fullName>Exigences__c</fullName>
    <label>Exigences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Niveau 1</fullName>
            </value>
            <value>
                <fullName>Niveau 2</fullName>
            </value>
            <value>
                <fullName>Niveau 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>