test/objects/Site__c/fields/Expositions_Risque_Numerique__c.field-meta.xml
<CustomField>
    <fullName>Expositions_Risque_Numerique__c</fullName>
    <label>Expositions Risque Numerique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risque 1</fullName>
            </value>
            <value>
                <fullName>Risque 2</fullName>
            </value>
            <value>
                <fullName>Risque 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>