test/objects/Site__c/fields/Groupe_de_Risque__c.field-meta.xml
<CustomField>
    <fullName>Groupe_de_Risque__c</fullName>
    <label>Groupe de Risque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groupe Risque 1</fullName>
            </value>
            <value>
                <fullName>Groupe Risque 2</fullName>
            </value>
            <value>
                <fullName>Groupe Risque 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>