test/objects/Site__c/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secteur</label>
    <referenceTo>Secteur__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>