test/objects/Site__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>